[package]
name = "tol2"
version = "0.1.0"
edition = "2024"

[dependencies]
assert_cmd = "2.1.1"
bitflags = "2.10.0"
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"
logos = "0.16.0"
miette = { version = "7.6.0", features = ["fancy"] }
predicates = "3.1.3"
thiserror = "2.0.17"
tokenkind_derive = { path = "./tokenkind_derive" }
gen_c = { path = "./third_party/gen_c" }

[[tests]]
name = "integration_tests"
path = "tests"
